# model_ai_for_pizza_price

./: README.md  app_pizza_simple.py  pizza_price_model.pkl  pizza_price_simple.ipynb  pyproject.toml
