[project]
name = "model-ai-for-pizza-price"
version = "0.1.0"
description = ""
authors = [
    {name = "Wanderson Duarte Alves",email = "wandersondrtlvs.new@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.57.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
package-mode = false  # <--- A POSIÇÃO CORRETA É AQUI

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
